fix: preons stylesheet pre-distribution commit check

--- a/config/preons.yaml
+++ b/config/preons.yaml
@@ -567,7 +567,7 @@ preons:
                 - special-sizes
                 - percentaged
                 - discrete
-                - negative-scale
+                - negative-scaled
 
         margin-bottom:
             class: mb
@@ -576,7 +576,7 @@ preons:
                 - special-sizes
                 - percentaged
                 - discrete
-                - negative-scale
+                - negative-scaled
 
         margin-left:
             class: ml
@@ -585,6 +585,7 @@ preons:
                 - special-sizes
                 - percentaged
                 - discrete
+                - negative-scaled
 
         margin-right:
             class: mr
@@ -593,7 +594,7 @@ preons:
                 - special-sizes
                 - percentaged
                 - discrete
-                - negative-scale
+                - negative-scaled
 
         margin-top:
             class: mt
@@ -602,7 +603,7 @@ preons:
                 - special-sizes
                 - percentaged
                 - discrete
-                - negative-scale
+                - negative-scaled
 
         object-fit:
             class: of-
