--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     ],
     "husky": {
         "hooks": {
-            "pre-commit": "lint-staged && yarn typecheck && yarn test",
+            "pre-commit": "preons stylesheet -c && lint-staged && yarn typecheck && yarn test",
             "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
         }
     },
